<resources>
    <string name="app_name">The Guru</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="oops_forgot_password"><u>Oops, Forgot Password?</u></string>
    <string name="new_here"><u>New Here?</u></string>
    <string name="invalid_email_id">Invalid email id</string>
    <string name="password">Password</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pass_desc">We Automatically created Password for you, Do you want to get it on email id?\n\n%s</string>
    <string name="yes_mail_me">Yes, Mail Me</string>
    <string name="no_cancel">No, Cancel</string>
    <string name="apologized_invalid_password">Apologized, Invalid Password</string>
    <string name="member">Member</string>
    <string name="admin">Admin</string>
    <string name="member_select_desc">member joins the satsanga on time, and happy to have seva</string>
    <string name="admin_select_desc">Admin Can create Satsanga Events and Stays Happy</string>
    <string name="full_name">Full Name</string>
    <string name="only_alphabets_space">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="whats_app_number">Whats-App Number</string>
    <string name="error_text_invalid_mobile">Invalid Mobile or WhatsApp Number</string>
    <string name="register">Register</string>
    <string name="register_as">Register As,</string>
    <string name="confirm">Confirm?</string>
    <string name="message_alert_cancel_registration">Do you want to cancel Registration Process?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="error_text_name_required">Apologized, Name required</string>
    <string name="error_text_invalid_email">Apologized, Invalid Email Given</string>
    <string name="error_text_apologized_invalid_mobile">Apologized, Mobile No is invalid</string>
    <string name="error_text_invalid_password">Password too short or left blank</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="past_events">Past Events</string>
    <string name="profile">Profile</string>
    <string name="upcoming_satsangs_in">Upcoming Satsangs in...</string>
    <string name="s_text">%s Sec</string>
    <string name="upcoming_event_in">Upcoming Event in,</string>
    <string name="schedules">Schedules</string>
    <string name="your_seva">Your Seva</string>
    <string name="available">Available</string>
    <string name="not_possible">Not Possible</string>
    <string name="not_sure">Not Sure</string>
    <string name="update_seva">Update Seva</string>
    <string name="seva_description">Seva Description</string>
    <string name="mobile">Mobile</string>
    <string name="create_new_event">Create New Event</string>
    <string name="let_s_create_event">Let\'s Create Event</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="select_event_date">Select Event Date</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="next">Next</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="events_starts_on">Events Starts on</string>
    <string name="events_end_on">Events End on</string>
    <string name="hh_mm_ss">HH:MM:SS</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="create_seva">Create Seva</string>
    <string name="short_description_of_seva">Short Description of Seva</string>
    <string name="seva_desc__language">Apan Devgiri madhe pan lihu Shaktat, Dhanyawad</string>
    <string name="seva_assigned_to">Seva Assigned to</string>
    <string name="assigned_to">Assigned to,</string>
    <string name="assign_seva">Assign Seva\'s</string>
    <string name="events">Events</string>
    <string name="your_created_events">Your Created Events</string>
    <string name="your_events">Your Events</string>
    <string name="text_error_email_exists">Apologized, Email id already register with us</string>
    <string name="auto_generate_password">Auto Generate Password</string>
    <string name="yes_please">Yes Please</string>
    <string name="no_i_don_t">No, I don\'t</string>
    <string name="centers">Centers</string>
    <string name="global">Global</string>
    <string name="occur_every">Occur Every</string>
    <string name="saturday">Saturday</string>
    <string name="view_members"><u>View Members</u></string>
    <string name="total_members">Total\nMembers</string>
    <string name="add_member">Add Member</string>
    <string name="latitude_longitude">Latitude:%f, Longitude: %f</string>
    <string name="create_member">Create Member</string>
    <string name="event_held_on">Event Held on</string>
    <string name="ago">%s Ago</string>
</resources>