<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drf_yellow_semi_circle"
        tools:context=".ui.fragments.update_seva.UpdateSevaBottomSheetFragment">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/style_text_10"
            android:text="@string/create_member"
            android:fontFamily="@font/font_cinzel_800"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toTopOf="@id/id_image_close"
            app:layout_constraintBottom_toBottomOf="@id/id_image_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/id_image_close"
            android:layout_width="@dimen/_24ssp"
            android:layout_height="@dimen/_24ssp"
            app:srcCompat="@drawable/ic_black_filled_close"
            android:tint="@color/color_blue_600"
            android:layout_margin="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_image_close">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/style_text_10"
                android:text="@string/full_name"
                android:fontFamily="@font/font_cinzel_600"
                android:textColor="@color/color_blue_600" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_edit_name"
                    style="@style/style_edit_match_wrap"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_8ssp"
                    android:inputType="textPersonName"
                    android:background="@drawable/drf_edit_input_back" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/style_text_10"
                android:text="@string/email"
                android:layout_marginTop="@dimen/_10ssp"
                android:fontFamily="@font/font_cinzel_600"
                android:textColor="@color/color_blue_600" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_emailId"
                    style="@style/style_edit_match_wrap"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drf_edit_input_back"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_8ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/style_text_10"
                android:text="@string/whats_app_number"
                android:layout_marginTop="@dimen/_10ssp"
                android:fontFamily="@font/font_cinzel_600"
                android:textColor="@color/color_blue_600" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_phone"
                    style="@style/style_edit_match_wrap"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drf_edit_input_back"
                    android:inputType="phone"
                    android:textSize="@dimen/_8ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/id_button_update_seva"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cornerRadius="@dimen/_6ssp"
                android:text="@string/add_member"
                android:textColor="@color/white"
                android:fontFamily="@font/font_cinzel_800"
                app:backgroundTint="@color/color_blue_600"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_10ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>