<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drf_yellow_semi_circle"
        tools:context=".ui.fragments.update_seva.UpdateSevaBottomSheetFragment">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/style_text_10"
            android:text="Schedule the Event"
            android:fontFamily="@font/font_cinzel_800"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toTopOf="@id/id_image_close"
            app:layout_constraintBottom_toBottomOf="@id/id_image_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/id_image_close"
            android:layout_width="@dimen/_24ssp"
            android:layout_height="@dimen/_24ssp"
            app:srcCompat="@drawable/ic_black_filled_close"
            android:tint="@color/color_blue_600"
            android:layout_margin="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_image_close">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/_6ssp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/style_text_10"
                        android:text="@string/events_starts_on"
                        android:fontFamily="@font/font_cinzel_600" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/id_text_event_starts_on"
                        style="@style/style_text_10"
                        android:padding="@dimen/_10ssp"
                        android:layout_width="match_parent"
                        android:textSize="@dimen/_12ssp"
                        android:text="@string/hh_mm_ss"
                        android:background="@drawable/drf_edit_input_back"
                        android:fontFamily="@font/font_cinzel_800" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/style_text_10"
                        android:text="@string/events_end_on"
                        android:fontFamily="@font/font_cinzel_600" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/style_text_10"
                        android:padding="@dimen/_10ssp"
                        android:layout_width="match_parent"
                        android:textSize="@dimen/_12ssp"
                        android:background="@drawable/drf_edit_input_back"
                        android:text="@string/hh_mm_ss"
                        android:fontFamily="@font/font_cinzel_800" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/style_text_10"
                android:text="@string/event_title"
                android:layout_marginTop="@dimen/_10ssp"
                android:fontFamily="@font/font_cinzel_600"
                android:textColor="@color/color_blue_600" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_edit_title"
                    style="@style/style_edit_match_wrap"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_8ssp"
                    android:inputType="textPersonName"
                    android:background="@drawable/drf_edit_input_back" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/style_text_10"
                android:text="@string/event_description"
                android:layout_marginTop="@dimen/_10ssp"
                android:fontFamily="@font/font_cinzel_600"
                android:textColor="@color/color_blue_600" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_edit_description"
                    style="@style/style_edit_match_wrap"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_8ssp"
                    android:inputType="textPersonName"
                    android:background="@drawable/drf_edit_input_back" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/id_button_update_seva"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cornerRadius="@dimen/_6ssp"
                android:text="@string/create_schedule"
                android:fontFamily="@font/font_cinzel_800"
                app:backgroundTint="@color/color_blue_600"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_10ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>