<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drf_yellow_semi_circle"
        tools:context=".ui.fragments.update_seva.UpdateSevaBottomSheetFragment">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/style_text_10"
            android:text="@string/update_seva"
            android:fontFamily="@font/font_cinzel_800"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toTopOf="@id/id_image_close"
            app:layout_constraintBottom_toBottomOf="@id/id_image_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/id_image_close"
            android:layout_width="@dimen/_24ssp"
            android:layout_height="@dimen/_24ssp"
            app:srcCompat="@drawable/ic_black_filled_close"
            android:tint="@color/color_blue_600"
            android:layout_margin="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_image_close">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/style_text_10"
                android:text="@string/seva_description"
                android:fontFamily="@font/font_cinzel_600" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="@dimen/_1ssp"
                app:strokeColor="@color/color_blue_600"
                app:cardBackgroundColor="@color/color_yellow_400"
                app:cardCornerRadius="0dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/style_text_10"
                    android:text="This is complete seva info so other person can view it clearly and update accordingly"
                    android:fontFamily="@font/font_cinzel_400"
                    android:padding="@dimen/_10ssp" />

            </com.google.android.material.card.MaterialCardView>

            <RadioGroup
                android:id="@+id/id_radio_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30ssp"
                android:layout_marginTop="@dimen/_8ssp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/id_chip_yes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/drf_chip_selector_on_yellow"
                    android:button="@color/transparent"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/text_yes"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_cinzel_600"
                    android:textColor="@drawable/drf_chip_text"
                    android:textSize="@dimen/_10ssp"
                    android:elevation="0dp" />

                <RadioButton
                    android:id="@+id/id_chip_not_possible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_6ssp"
                    android:background="@drawable/drf_chip_selector_on_yellow"
                    android:button="@color/transparent"
                    android:gravity="center"
                    android:text="@string/not_possible"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_cinzel_600"
                    android:textColor="@drawable/drf_chip_text"
                    android:textSize="@dimen/_10ssp"
                    android:elevation="0dp" />

                <RadioButton
                    android:id="@+id/id_chip_not_sure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_6ssp"
                    android:background="@drawable/drf_chip_selector_on_yellow"
                    android:button="@color/transparent"
                    android:gravity="center"
                    android:text="@string/not_sure"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_cinzel_600"
                    android:textColor="@drawable/drf_chip_text"
                    android:textSize="@dimen/_10ssp"
                    android:elevation="0dp" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/id_button_update_seva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/_6ssp"
                android:text="@string/update_seva"
                android:fontFamily="@font/font_cinzel_800"
                app:backgroundTint="@color/color_blue_600"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_marginBottom="@dimen/_10ssp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>